--- a/flowershop/requirements.txt
+++ b/flowershop/requirements.txt
@@ -6,7 +6,7 @@ dateparser==1.2.1
 djangorestframework==3.15.2
 Pillow==10.2.0
 gunicorn
-
 pytz==2025.1
 whitenoise==6.9.0
 dj_database_url
+psycopg2
